2004-05-04  Rodrigo Moya <rodrigo@ximian.com>

	* gui/e-day-view.c (process_component): remove the detached instances
	from the view on updates.

	* gui/e-week-view.c (model_rows_deleted_cb): no need to iterate all
	over the events, we've got the row index so can retrieve the rows
	being removed.
	(row_deleted_check_cb, remove_uid_cb): removed unneded functions.
	(process_component): remove the detached instances from the view on
	updates.

2004-05-03  Rodney Dawes  <dobey@ximian.com>

	* gui/dialogs/select-source-dialog.c (select_source_dialog):
	Make this dialog be HIG-compliant and accessible

2004-05-03  Edgar Luna Díaz  <eald@linuxuanl.org>

	* gui/dialogs/select-source-dialog.c (select_source_dialog):
	Set the default window size to 276 x 320

	Fixes #57298

2004-05-03  Larry Ewing  <lewing@ximian.com>

	* gui/dialogs/calendar-setup.glade: rename the cancel button.

2004-04-29  Larry Ewing  <lewing@ximian.com>

	* gui/e-cal-model.c (ecm_get_color_for_component): use the source
	color if it is set.  Yay for ugly colors.

	* gui/e-cal-model.h: add a color holder to the ECalModelComponent
	since the return value of the color stuff is const.

2004-05-03  JP Rosevear  <jpr@ximian.com>

	Fixes #51714

	* gui/e-cal-list-view.c (setup_e_table): listen for double click
	signal
	(e_cal_list_view_on_table_double_click): edit the appointment that
	was double clicked on

2004-05-03  JP Rosevear  <jpr@ximian.com>

	* gui/calendar-component.c (set_info): set the info label
	(calendar_dates_changed_cb): call back for when the dates of the
	calendar change
	(create_component_view): store the info label for later use;
	listen for date changes to set the info label

2004-05-03  JP Rosevear  <jpr@ximian.com>

	Fixes #57897

	* gui/e-tasks.c (setup_widgets): no need to listen for the deleted
	signal, the cursor will change in that case

2004-05-03  JP Rosevear  <jpr@ximian.com>

	* gui/e-cal-model-tasks.c (set_completed): remove useless debug
	statement
