@@ -1,5 +1,8 @@
 2004-05-04  Rodrigo Moya <rodrigo@ximian.com>
 
+	* gui/e-cal-model.c (e_cal_view_objects_modified_cb): replace the
+	individual instances when that's what is being modified.
+
 	* gui/e-day-view.c (process_component): remove the detached instances
 	from the view on updates.
 
